fix: Central align copyright in footer

--- a/themes/casperv5/assets/scss/screen.scss
+++ b/themes/casperv5/assets/scss/screen.scss
@@ -1692,7 +1692,9 @@ iframe.instagram-media + script + :not([id]) {
 .site-footer .inner {
     display: grid;
     grid-gap: 40px;
-    grid-template-columns: auto 1fr auto;
+    // Re-add this when we add more contents to the footer.
+    // grid-template-columns: auto 1fr auto;
+    justify-content: center;
     color: rgba(255,255,255,0.7);
     font-size: 1.3rem;
 }
